--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Orlovsky Oleg</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <img src="CV-image.jpg" class="image">
+            <h1><a href="https://belka46.github.io/rsschool-cv/cv">rsschool-cv</a></h1>
+        </header>
+    </div>
 </body>
 </html>
