--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
                     <p>car maintenance and tuning, hiking, traveling, fishing.</p>   
                 </div>
               </main>
+              <footer>
+                    "https://belka46.github.io/rsschool-cv/cv"
+              </footer>
     </div>
 </body>
 </html>
